2006-07-28  Aaron Bockover  <abock@gnome.org>

	* src/PlayerInterface.cs: Make the remove and delete songs dialog
	conform to the HIG

2006-07-28  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Widgets/ActiveUserEvent.cs: New fully-HIG-compliant 
	cancel/stop dialog; support having custom stop messages

	* src/Banshee.Base/AudioCdRipper.cs: 
	* src/Banshee.Base/BatchTranscoder.cs:
	* src/Banshee.Base/ImportManager.cs:
	* src/Banshee.Base/Banshee.Burner/BurnerSessionRecorder.cs:
	* src/Banshee.Base/Dap/Dap.cs: Added better operation names and custom
	stop-operation messages so the stop dialog is more HIG compliant and
	easier to understand

	* src/Banshee.Base/ActionManager.cs: Set Gtk.Window.DefaultIconName

	* src/Banshee.Widgets/HigMessageDialog.cs: Set SkipTaskbarHint as 
	suggested by the HIG, make the message label support markup

2006-07-28  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Base/Sources/PlaylistSource.cs: Fire TrackAdded/Removed
	events when appropriate.  Fixes BGO #347014.

	* src/Banshee.Dap/MassStorage/MassStorageDap.cs: Conform to the HAL spec
	when exporting files.

2006-07-28  Aaron Bockover  <abock@gnome.org>

	This commit breaks major API regarding Banshee.Sources.Source; expect
	related plugins and other code to break

	* src/Banshee.Base/Library.cs:
	* src/Banshee.Base/Source.cs: 
	* src/Banshee.Base/AudioCd/AudioCdDisk.cs:
	* src/Banshee.Base/Banshee.Burner/BurnerSource.cs:
	* src/Banshee.Base/Dap/Dap.cs:
	* src/Banshee.Base/Sources/AudioCdSource.cs:
	* src/Banshee.Base/Sources/LibrarySource.cs:
	* src/Banshee.Base/Sources/LocalQueueSource.cs:
	* src/Banshee.Base/Sources/PlaylistSource.cs:
	* src/Banshee.Plugins/Daap/DaapSource.cs:
	* src/Banshee.Plugins/Daap/DatabaseProxy.cs: Use generics on public API;
	goal was to have Banshee.Source.Source.Tracks be IEnumerable<TrackInfo>,
	thus everything else below had to become generic; clean up along the way

	* src/Banshee.Base/Sources/IImportable.cs: Import takes 